# nescrowee

./: .gitignore  AGENTS.md  LICENSE  README.md  bun.lockb  index.html  package.json  tailwind.config.ts  vercel.json  vite.config.ts
agent/: Dockerfile  index.ts  investigator.ts  near-client.ts  package.json  social-db.ts  test.ts  tools.ts  tsconfig.json
agent/prompts/: investigation.md
api/: ai-proxy.ts  hot-pay-webhook.ts  nova-proxy.ts
contract/: Cargo.toml  build.sh
contract/.cargo/: config.toml
contract/src/: dispute.rs  escrow.rs  lib.rs  milestone.rs  tests.rs  types.rs
docs/: NEAR_IDEAS.md
mcp-server/: README.md  package.json  tsconfig.json
mcp-server/src/: index.ts  near.ts  resources.ts  tools.ts
nescrowee-flow-design/components/: dispute-flow-diagram.tsx
public/: hot-kit.avif  site.webmanifest
scripts/: deploy-contract.sh  deploy-mainnet.mjs  init-contract.sh  register-tee.sh  setup-env.sh  setup-relay.sh  view-contract.sh
src/: App.tsx  app.tsx  index.css
src/agent/: client.ts  investigation.ts  parser.ts  types.ts
src/components/: Footer.tsx  Navbar.tsx  StatusBadge.tsx  arrow-cursor.tsx  explain-term.tsx  how-it-works-flow.tsx  page-loader.tsx  smooth-scroll-provider.tsx  status-badge.tsx
src/constants/: ai-prompt.ts  glossary.ts
src/contexts/: wallet-context.tsx
src/data/: mockData.ts
src/hooks/: useChat.ts  useContract.ts  useWallet.ts
src/investigation/: client.ts  investigation.ts
src/near/: ai.ts  config.ts  contract.ts  social.ts  wallet-account.ts  wallet.ts
src/nova/: client.ts
techdebt/: current.md
(+140 files in other folders)
