[package]
name = "nescrowee"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "=5.6.0"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
near-sdk = { version = "=5.6.0", features = ["unit-testing"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
